Update Special Edition 10 ranks

--- a/styles/prosilver/template/event/memberlist_view_rank_avatar_after.html
+++ b/styles/prosilver/template/event/memberlist_view_rank_avatar_after.html
@@ -2,3 +2,17 @@
 <!-- IF RANK_TWO_IMG --><dd style="text-align: center;">{RANK_TWO_IMG}</dd><!-- ENDIF -->
 <!-- IF RANK_THR_TITLE --><dd style="text-align: center;">{RANK_THR_TITLE}</dd><!-- ENDIF -->
 <!-- IF RANK_THR_IMG --><dd style="text-align: center;">{RANK_THR_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_FOU_TITLE --><dd style="text-align: center;">{RANK_FOU_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_FOU_IMG --><dd style="text-align: center;">{RANK_FOU_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_FIV_TITLE --><dd style="text-align: center;">{RANK_FIV_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_FIV_IMG --><dd style="text-align: center;">{RANK_FIV_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_SIX_TITLE --><dd style="text-align: center;">{RANK_SIX_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_SIX_IMG --><dd style="text-align: center;">{RANK_SIX_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_SVN_TITLE --><dd style="text-align: center;">{RANK_SVN_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_SVN_IMG --><dd style="text-align: center;">{RANK_SVN_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_EGT_TITLE --><dd style="text-align: center;">{RANK_EGT_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_EGT_IMG --><dd style="text-align: center;">{RANK_EGT_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_NIN_TITLE --><dd style="text-align: center;">{RANK_NIN_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_NIN_IMG --><dd style="text-align: center;">{RANK_NIN_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_TEN_TITLE --><dd style="text-align: center;">{RANK_TEN_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_TEN_IMG --><dd style="text-align: center;">{RANK_TEN_IMG}</dd><!-- ENDIF -->
