--- a/styles/prosilver/template/event/memberlist_view_rank_no_avatar_after.html
+++ b/styles/prosilver/template/event/memberlist_view_rank_no_avatar_after.html
@@ -2,3 +2,17 @@
 <!-- IF RANK_TWO_IMG --><dt>&nbsp;</dt> <dd>{RANK_TWO_IMG}</dd><!-- ENDIF -->
 <!-- IF RANK_THR_TITLE --><dt>%nbsp;</dt> <dd>{RANK_THR_TITLE}</dd><!-- ENDIF -->
 <!-- IF RANK_THR_IMG --><dt>&nbsp;</dt> <dd>{RANK_THR_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_FOU_TITLE --><dt>%nbsp;</dt> <dd>{RANK_FOU_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_FOU_IMG --><dt>&nbsp;</dt> <dd>{RANK_FOU_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_FIV_TITLE --><dt>%nbsp;</dt> <dd>{RANK_FIV_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_FIV_IMG --><dt>&nbsp;</dt> <dd>{RANK_FIV_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_SIX_TITLE --><dt>%nbsp;</dt> <dd>{RANK_SIX_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_SIX_IMG --><dt>&nbsp;</dt> <dd>{RANK_SIX_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_SVN_TITLE --><dt>%nbsp;</dt> <dd>{RANK_SVN_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_SVN_IMG --><dt>&nbsp;</dt> <dd>{RANK_SVN_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_EGT_TITLE --><dt>%nbsp;</dt> <dd>{RANK_EGT_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_EGT_IMG --><dt>&nbsp;</dt> <dd>{RANK_EGT_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_NIN_TITLE --><dt>%nbsp;</dt> <dd>{RANK_NIN_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_NIN_IMG --><dt>&nbsp;</dt> <dd>{RANK_NIN_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_TEN_TITLE --><dt>%nbsp;</dt> <dd>{RANK_TEN_TITLE}</dd><!-- ENDIF -->
+<!-- IF RANK_TEN_IMG --><dt>&nbsp;</dt> <dd>{RANK_TEN_IMG}</dd><!-- ENDIF -->
