Update Special Edition 10 ranks

--- a/styles/prosilver/template/event/ucp_pm_viewmessage_rank_after.html
+++ b/styles/prosilver/template/event/ucp_pm_viewmessage_rank_after.html
@@ -1,2 +1,9 @@
 <!-- IF RANK_TWO_TITLE or RANK_TWO_IMG --><dd class="profile-rank">{RANK_TWO_TITLE}<!-- IF RANK_TWO_TITLE and RANK_TWO_IMG --><br /><!-- ENDIF -->{RANK_TWO_IMG}</dd><!-- ENDIF -->
 <!-- IF RANK_THR_TITLE or RANK_THR_IMG --><dd class="profile-rank">{RANK_THR_TITLE}<!-- IF RANK_THR_TITLE and RANK_THR_IMG --><br /><!-- ENDIF -->{RANK_THR_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_FOU_TITLE or RANK_FOU_IMG --><dd class="profile-rank">{RANK_FOU_TITLE}<!-- IF RANK_FOU_TITLE and RANK_FOU_IMG --><br /><!-- ENDIF -->{RANK_FOU_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_FIV_TITLE or RANK_FIV_IMG --><dd class="profile-rank">{RANK_FIV_TITLE}<!-- IF RANK_FIV_TITLE and RANK_FIV_IMG --><br /><!-- ENDIF -->{RANK_FIV_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_SIX_TITLE or RANK_SIX_IMG --><dd class="profile-rank">{RANK_SIX_TITLE}<!-- IF RANK_SIX_TITLE and RANK_SIX_IMG --><br /><!-- ENDIF -->{RANK_SIX_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_SVN_TITLE or RANK_SVN_IMG --><dd class="profile-rank">{RANK_SVN_TITLE}<!-- IF RANK_SVN_TITLE and RANK_SVN_IMG --><br /><!-- ENDIF -->{RANK_SVN_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_EGT_TITLE or RANK_EGT_IMG --><dd class="profile-rank">{RANK_EGT_TITLE}<!-- IF RANK_EGT_TITLE and RANK_EGT_IMG --><br /><!-- ENDIF -->{RANK_EGT_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_NIN_TITLE or RANK_NIN_IMG --><dd class="profile-rank">{RANK_NIN_TITLE}<!-- IF RANK_NIN_TITLE and RANK_NIN_IMG --><br /><!-- ENDIF -->{RANK_NIN_IMG}</dd><!-- ENDIF -->
+<!-- IF RANK_TEN_TITLE or RANK_TEN_IMG --><dd class="profile-rank">{RANK_TEN_TITLE}<!-- IF RANK_TEN_TITLE and RANK_TEN_IMG --><br /><!-- ENDIF -->{RANK_TEN_IMG}</dd><!-- ENDIF -->
